--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
-
+  sdk: '>=3.3.0 <4.0.0'
+  flutter: '>=3.10.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -34,11 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  floor: ^1.5.0
+  sqflite: ^2.4.2
+  sqflite_common_ffi_web: ^0.4.5+4
+  encrypted_shared_preferences: ^3.0.1
+  url_launcher: ^6.3.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.4.13
+  floor_generator: ^1.5.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
