--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
 
@@ -39,7 +41,7 @@ dependencies:
   sqflite_common_ffi_web: ^0.4.5+4
   encrypted_shared_preferences: ^3.0.1
   url_launcher: ^6.3.2
-  intl: ^0.19.0
+  intl: any
 
   # Plugin used to securely store sensitive data in key-value pairs
   flutter_secure_storage: ^9.2.2
@@ -67,11 +69,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
