--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   floor: ^1.5.0
   sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.0
   sqflite_common_ffi_web: ^0.4.5+4
   encrypted_shared_preferences: ^3.0.1
   url_launcher: ^6.3.2
