--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   floor: ^1.5.0
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.0
+  path: ^1.8.3
   sqflite_common_ffi_web: ^0.4.5+4
   encrypted_shared_preferences: ^3.0.1
   url_launcher: ^6.3.2
